# forza-horizon-4-data-receiver

./: .gitignore  CMakeLists.txt  README.md  forza-horizon-4-data-format.json  main.cpp
data_process/: CMakeLists.txt  config.json  config_code_generator.cpp  data_convert.cpp  data_convert2.cpp  forza-horizon-4-data-format.json  forza_horizon4_structure.tmp
data_receiver_CLI/: CMakeLists.txt  data_receiver_cli.cpp
data_receiver_CLI/include/: data_receiver.h  forza_horizon4_structure.h  telemetry_type.h
data_receiver_GUI/: CMakeLists.txt  data_receiver_gui.cpp
data_receiver_GUI/include/: DataSaverCSV.h  data_receiver.h  data_receiver_gui.h  forza_horizon4_structure.h  plot_function_utilities.h
